[project]
name = "z3wuzla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mr-Pine", email = "git@mr-pine.de" }
]
requires-python = ">=3.13"
dependencies = [
    "bitwuzla",
    "z3-solver>=4.13.4.0",
]

[project.scripts]
z3wuzla = "z3wuzla:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bitwuzla = { path = "../../ctf/tools/bitwuzla" }
